--- a/food_ordering_frontend/package.json
+++ b/food_ordering_frontend/package.json
@@ -28,6 +28,7 @@
         "highcharts-react-official": "^3.2.0",
         "ipfs-http-client": "^59.0.0",
         "joi": "^17.7.0",
+        "kubo-rpc-client": "^5.0.2",
         "moment": "^2.29.4",
         "next": "^13.4.4",
         "react": "^18.2.0",
